--- a/activities/index.html
+++ b/activities/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="mt-4">
                         <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
-                        <a href="activity1/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
+                        <a href="activity1/" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
                     </div>
                 </div>
             </div>
