--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
-    <header class="bg-blue-700 text-white">
-        <div class="container mx-auto py-6 px-4">
-            <h1 class="text-3xl font-bold">Principles of Macroeconomics</h1>
-            <p class="mt-2 text-blue-100">Spring 2025 • ECON 2</p>
+<header>
+    <div class="relative">
+        <img src="banner1.png" alt="Macroeconomics Course Banner" class="w-full max-h-96 object-cover">
+        <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
+          <div class="text-center text-white px-4">
+            <h2 class="text-3xl md:text-4xl font-bold">Principles of Macroeconomics</h2>
+            <p class="mt-2 text-xl">Spring 2025 • ECON 2</p>
+          </div>
         </div>
-    </header>
+      </div>
+</header>
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
@@ -35,14 +40,14 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-medium mb-2">Course Materials</h3>
                 <p class="text-gray-600 mb-4">Access lecture slides, notes, readings, and other resources.</p>
-                <a href="#" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Materials</a>
+                <a href="materials.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Materials</a>
             </div>
             
             <!-- FAQ Card -->
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-medium mb-2">FAQ</h3>
                 <p class="text-gray-600 mb-4">Frequently asked questions and course policies.</p>
-                <a href="#" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View FAQ</a>
+                <a href="faq.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View FAQ</a>
             </div>
         </div>
     </main>
