--- a/activities/index.html
+++ b/activities/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discussion Activities - Principles of Macroeconomics</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-50">
-    <!-- Header -->
-    <header class="bg-blue-700 text-white">
-        <div class="container mx-auto py-6 px-4">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Discussion Activities - Principles of Macroeconomics</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="https://cdn.tailwindcss.com"></script>
+      </head>
+      <body class="bg-gray-50">
+      <!-- Header -->
+      <header>
+        <div class="relative">
+          <img src="banner5.png" alt="Macroeconomics Course Banner" class="w-full max-h-64 object-cover">
+          <div class="absolute inset-0 bg-black bg-opacity-40 flex flex-col justify-center px-6">
             <div class="flex items-center mb-2">
-                <a href="../index.html" class="text-blue-100 hover:text-white mr-2">← Back to Home</a>
+              <a href="../index.html" class="text-blue-100 hover:text-white mr-2">← Back to Home</a>
             </div>
-            <h1 class="text-3xl font-bold">Discussion Activities</h1>
+            <h1 class="text-3xl font-bold text-white">Discussion Activities</h1>
             <p class="mt-2 text-blue-100">Weekly discussion section materials and exercises</p>
+          </div>
         </div>
-    </header>
+      </header>
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
@@ -35,9 +38,10 @@
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Supply and Demand</span>
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Housing Markets</span>
                     </div>
-                    <div class="mt-4">
-                        <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
+                    <div class="mt-4 space-y-2">
+                        <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
                         <a href="activity1/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
+                        <a href="Discussion_Activity_1.pdf" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Activity 1 PDF</a>
                     </div>
                 </div>
             </div>
