Initial commit of macroeconomics course website

--- a/activities/index.html
+++ b/activities/index.html
@@ -41,7 +41,7 @@
                     <div class="mt-4 space-y-2">
                         <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
                         <a href="activity1/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
-                        <a href="Discussion_Activity_1.pdf" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Activity 1 PDF</a>
+                        <a href="DiscussionActivity1.pdf" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Activity 1 PDF</a>
                     </div>
                 </div>
             </div>
