Initial commit of macroeconomics course website

--- a/activities/activity1/index.html
+++ b/activities/activity1/index.html
@@ -117,7 +117,7 @@
 <!-- Header -->
 <header>
   <div class="banner-container">
-    <img src="/images/banner7.png" alt="Housing Market Analysis Banner" class="banner-image">
+    <img src="../../images/banner7.png" alt="Housing Market Analysis Banner" class="banner-image">
     <div class="banner-overlay">
       <div class="container mx-auto">
         <div class="nav-links">
