Initial commit of macroeconomics course website

--- a/activities/index.html
+++ b/activities/index.html
@@ -93,7 +93,7 @@
 <!-- Header -->
 <header>
   <div class="banner-container">
-    <img src="/images/banner5.png" alt="Macroeconomics Course Banner" class="banner-image">
+    <img src="../images/banner5.png" alt="Macroeconomics Course Banner" class="banner-image">
     <div class="banner-overlay">
       <div class="flex items-center mb-2">
         <a href="../index.html" class="back-link">← Back to Home</a>
