--- a/activities/index.html
+++ b/activities/index.html
@@ -129,11 +129,11 @@
             </div>
             
             <!-- Activity 2 Card (Coming Soon) -->
-            <div class="bg-white rounded-lg shadow-md overflow-hidden opacity-75">
-                <div class="h-2 bg-gray-400"></div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="h-2 bg-blue-600"></div>
                 <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">GDP Components</h3>
-                    <p class="text-gray-600 mb-4">Explore changes in GDP components and their impact on economic growth.</p>
+                    <h3 class="text-xl font-medium mb-2">Well-Being Measures</h3>
+                    <p class="text-gray-600 mb-4">Go beyond GDP and create a new measure of well-being.</p>
                     <div class="flex items-center text-sm text-gray-500 mb-3">
                         <span>April 8-11, 2025</span>
                     </div>
@@ -141,8 +141,10 @@
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">GDP</span>
                         <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Growth</span>
                     </div>
-                    <div class="mt-4">
-                        <span class="inline-block bg-gray-400 text-white px-4 py-2 rounded">Coming Soon</span>
+                    <div class="mt-4 space-y-2">
+                        <a href="activity2/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Start Activity</a>
+                        <a href="activity2/ta-dashboard.html" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">TA Dashboard</a>
+                        <a href="Discussion_Activity_2.pdf" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Activity 2 PDF</a>
                     </div>
                 </div>
             </div>
