Initial commit of macroeconomics course website

--- a/activities/activity2/index.html
+++ b/activities/activity2/index.html
@@ -987,8 +987,8 @@
                 throw new Error('No data found in the Excel file');
             }
             
-            // Process the data for our application
-            processExcelData(jsonData);
+            // Use the existing function name from your code
+            processUNData(jsonData);
         } catch (error) {
             console.error('Error loading UN data:', error);
             
