--- a/activities/activity2/ta-dashboard.html
+++ b/activities/activity2/ta-dashboard.html
@@ -143,7 +143,7 @@
                     <a href="ta-dashboard.html" class="text-white hover:text-blue-200 font-bold">TA Dashboard</a>
                 </nav>
                 <h1 class="text-4xl font-bold mb-2">TA Dashboard - Alternative GDP Index Rankings</h1>
-                <p class="text-xl">Monitor and analyze student submissions for the Alternative GDP Index Rankings activity</p>
+                <p class="text-xl">Analyze  submissions for the Alternative GDP Index Rankings activity</p>
             </div>
         </div>
     </header>
@@ -162,7 +162,7 @@
                         file:bg-blue-50 file:text-blue-700
                         hover:file:bg-blue-100"/>
                 </div>
-
+        
                 <!-- Metric Selection -->
                 <div class="bg-blue-50 p-4 rounded-lg">
                     <h3 class="font-medium mb-2">Select Metric</h3>
