--- a/materials.html
+++ b/materials.html
@@ -138,7 +138,7 @@
                         <td class="py-3 px-4">Week 1</td>
                         <td class="py-3 px-4">Reviewing Supply and Demand with Housing</td>
                         <td class="py-3 px-4">Chapters 1, 2.0-2.5</td>
-                        <td class="py-3 px-4">Quiz 1 released Apr 2, Due Apr 7</td>
+                        <td class="py-3 px-4">Quiz 1 released Apr 2, Due Apr 7<br>Discussion Google Form: Supply and Demand Review</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 2</td>
@@ -156,43 +156,43 @@
                         <td class="py-3 px-4">Week 4</td>
                         <td class="py-3 px-4">CPI and Unemployment, Short-Run Macroeconomics</td>
                         <td class="py-3 px-4">Chapters 3.2, 3.3, 4.0, 4.1</td>
-                        <td class="py-3 px-4">Quiz 4 released Apr 23, Due Apr 28<br>Activity #3 in section</td>
+                        <td class="py-3 px-4">Quiz 4 released Apr 23, Due Apr 28<br>Discussion Google Form: Midterm Review</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 5</td>
                         <td class="py-3 px-4">Midterm Exam (Mon), Consumption Function and Short-Run Equilibrium (Wed)</td>
                         <td class="py-3 px-4">Chapters 4.1, 4.2, 4.3</td>
-                        <td class="py-3 px-4"><strong>Midterm Exam: Monday, April 28th</strong><br>No Quiz this week</td>
+                        <td class="py-3 px-4"><strong>Midterm Exam: Monday, April 28th</strong><br>No Quiz this week<br>Discussion Google Form: Midterm Recap</td></td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 6</td>
                         <td class="py-3 px-4">Short-Run Equilibrium and Fiscal Policy</td>
                         <td class="py-3 px-4">Chapters 4.3, 5.1</td>
-                        <td class="py-3 px-4">Quiz 5 released May 7, Due May 12<br>Activity #4 in section</td>
+                        <td class="py-3 px-4">Quiz 5 released May 7, Due May 12<br>Activity #3 in section</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 7</td>
                         <td class="py-3 px-4">Tax Multiplier and Deficits, Debts, and Money</td>
                         <td class="py-3 px-4">Chapters 5.1, 5.2, 6.1</td>
-                        <td class="py-3 px-4">Quiz 6 released May 14, Due May 19<br>Activity #5 in section</td>
+                        <td class="py-3 px-4">Quiz 6 released May 14, Due May 19<br><br>Discussion Google Form: Aggregate Expenditures Model</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 8</td>
                         <td class="py-3 px-4">Deficits, Debts, and Money</td>
                         <td class="py-3 px-4">Chapters 5.1, 5.2, 6.1</td>
-                        <td class="py-3 px-4">Quiz 7 released May 21, Due May 28<br>Activity #6 in section</td>
+                        <td class="py-3 px-4">Quiz 7 released May 21, Due May 28<br>Activity #4 in section</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 9</td>
                         <td class="py-3 px-4">Monetary Policy and Aggregate Demand</td>
                         <td class="py-3 px-4">Chapters 6.1, 6.2, 6.3, 7.1</td>
-                        <td class="py-3 px-4">Quiz 8 released May 28, Due Jun 2<br>Activity #7 in section</td>
+                        <td class="py-3 px-4">Quiz 8 released May 28, Due Jun 2<br>Discussion Google Form: Monetary Policy</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4">Week 10</td>
                         <td class="py-3 px-4">Aggregate Demand, Aggregate Supply</td>
                         <td class="py-3 px-4">Chapters 7.1, 7.2, 7.3, 7.4</td>
-                        <td class="py-3 px-4">Quiz 9 released Jun 4, Due Jun 10<br>Activity #8 in section</td>
+                        <td class="py-3 px-4">Quiz 9 released Jun 4, Due Jun 10<br>Activity #5 in section</td>
                     </tr>
                     <tr>
                         <td class="py-3 px-4 bg-blue-50 font-semibold" colspan="4">
@@ -222,10 +222,10 @@
             
             <div class="bg-gray-50 p-4 rounded-lg">
                 <h4 class="font-semibold mb-2 text-blue-700">Discussion Sections</h4>
-                <p class="text-gray-700 mb-2">Weekly AI-based activities to connect with peers</p>
+                <p class="text-gray-700 mb-2">AI-based activities to connect with peers</p>
                 <ul class="list-disc ml-6 text-gray-700">
                     <li>Complete and submit the assigned activity by the end of section</li>
-                    <li>Your top 5 (of 8) activities count for 10% of your grade</li>
+                    <li>Your top 3 (of 5) activities count for 15% of your grade</li>
                     <li>Attendance and participation are mandatory for credit</li>
                 </ul>
             </div>
