--- a/faq.html
+++ b/faq.html
@@ -110,7 +110,8 @@
                     <p><strong>Office Hours:</strong></p>
                     <ul class="list-disc ml-6">
                         <li>Wednesdays, 2:00-3:30 PM, North Hall 3032</li>
-                        <li>Coffee Hours (location varies): Fridays, 1:00-2:00 PM (sign-up required)</li>
+                        <li>Coffee Hours (location varies): Fridays, 1:00-2:00 PM</li>
+                        <li>Coffee Hours Sign-up at <a href="https://shorturl.at/eYOXy" class="text-blue-600 hover:underline">https://shorturl.at/eYOXy</a></li>
                     </ul>
                 </div>
             </div>
@@ -152,32 +153,47 @@
             <div class="mb-4">
                 <h4 class="font-semibold mb-2">How are the grades calculated?</h4>
                 <ul class="list-disc ml-6 text-gray-700">
-                    <li><strong>Midterm Exam:</strong> 30-35% (April 28th)</li>
-                    <li><strong>Final Exam:</strong> 40-45% (June 10th, 12:00-2:30 PM)</li>
-                    <li><strong>Lecture Quizzes:</strong> 10% (9 quizzes released weekly)</li>
-                    <li><strong>Discussion Section Activities:</strong> 10% (top 5 of 8 activities count)</li>
+                  <li><strong>Lecture Quizzes:</strong> 10% (9 quizzes released weekly, 40 - 50 correct answers for full credit)</li>
+                  <li><strong>Discussion Section Activities:</strong> 15% (top 3 of 5 activities count)</li>
+                    <li><strong>Midterm Exam:</strong> 30% (April 28th)</li>
+                    <li><strong>Final Exam:</strong> 40% (June 10th, 12:00-2:30 PM)</li>
                     <li><strong>Participation:</strong> 5%</li>
                 </ul>
                 <p class="text-gray-700 mt-2">
-                    If you participate in at least 50% of the in-class TopHat questions, each correct quiz answer counts as 0.25% of your total grade. If you participate in less than 50% of the in-class questions, each correct quiz answer counts as 0.2%.
+                    <div>If you participate in at least 50% of the in-class TopHat questions, each correct quiz answer counts as 0.25% of your total grade and you receive full credit for answering 40 questions correctly throughout the term.</div>
+                    <br>
+                    <div>If you participate in less than 50% of the in-class questions, each correct quiz answer counts as 0.2% and you receive full credit for answering 50 questions correctly throughout the term.</div>
                 </p>
             </div>
             
             <div class="mb-4">
                 <h4 class="font-semibold mb-2">What is the grading scale?</h4>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-2 text-gray-700">
-                    <div><strong>A:</strong> 93-100%</div>
-                    <div><strong>A-:</strong> 90-93%</div>
-                    <div><strong>B+:</strong> 88-89%</div>
-                    <div><strong>B:</strong> 83-88%</div>
-                    <div><strong>B-:</strong> 80-83%</div>
-                    <div><strong>C+:</strong> 78-79%</div>
-                    <div><strong>C:</strong> 73-78%</div>
-                    <div><strong>C-:</strong> 70-73%</div>
-                    <div><strong>D+:</strong> 68-69%</div>
-                    <div><strong>D:</strong> 63-68%</div>
-                    <div><strong>D-:</strong> 60-63%</div>
-                    <div><strong>F:</strong> Below 60%</div>
+                <div class="space-y-2 text-gray-700">
+                    <div class="grid grid-cols-3 gap-4">
+                        <div><strong>A:</strong> 93-100%</div>
+                        <div><strong>A-:</strong> 90-93%</div>
+                        <div></div>
+                    </div>
+                    <div class="grid grid-cols-3 gap-4">
+                        <div><strong>B+:</strong> 88-89%</div>
+                        <div><strong>B:</strong> 83-88%</div>
+                        <div><strong>B-:</strong> 80-83%</div>
+                    </div>
+                    <div class="grid grid-cols-3 gap-4">
+                        <div><strong>C+:</strong> 78-79%</div>
+                        <div><strong>C:</strong> 73-78%</div>
+                        <div><strong>C-:</strong> 70-73%</div>
+                    </div>
+                    <div class="grid grid-cols-3 gap-4">
+                        <div><strong>D+:</strong> 68-69%</div>
+                        <div><strong>D:</strong> 63-68%</div>
+                        <div><strong>D-:</strong> 60-63%</div>
+                    </div>
+                    <div class="grid grid-cols-3 gap-4">
+                        <div><strong>F:</strong> Below 60%</div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -220,7 +236,7 @@
 <!-- Footer -->
 <footer class="bg-gray-100 border-t mt-12 py-6 px-4">
 <div class="container mx-auto">
-<p class="text-gray-600">© 2025 Economics Department</p>
+<p class="text-gray-600"> 2025 Economics Department</p>
 </div>
 </footer>
 </body>
