--- a/materials.html
+++ b/materials.html
@@ -189,7 +189,7 @@
                             <div>Chapters 4.1, 4.2, 4.3</div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Monday:</span><br>
-                                <span class="font-semibold text-blue-700">Midterm Exam - No Lecture</span>
+                                <span class="font-semibold text-blue-700">Midterm Exam - In Class</span>
                             </div>
                             <div class="mt-2">
                                 <span class="text-gray-600">Wednesday:</span><br>
