Initial commit with Canvas integration

--- a/materials.html
+++ b/materials.html
@@ -122,7 +122,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 1</a> released Apr 2, Due Apr 7<br>
-                            Discussion Google Form: Supply and Demand Review
+                            Discussion Google Form: Supply and Demand Review<br>
+                            <a href="review_session/Week1ReviewSession.pdf" class="text-blue-600 hover:underline">Week 1 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -141,7 +142,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 2</a> released Apr 9, Due Apr 14<br>
-                            <a href="activities/activity1/index.html" class="text-blue-600 hover:underline">Activity #1</a> in section
+                            <a href="activities/activity1/index.html" class="text-blue-600 hover:underline">Activity #1</a> in section<br>
+                            <a href="review_session/Week2ReviewSession.pdf" class="text-blue-600 hover:underline">Week 2 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -160,7 +162,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 3</a> released Apr 16, Due Apr 21<br>
-                            <a href="activities/activity2/index.html" class="text-blue-600 hover:underline">Activity #2</a> in section
+                            <a href="activities/activity2/index.html" class="text-blue-600 hover:underline">Activity #2</a> in section<br>
+                            <a href="review_session/Week3ReviewSession.pdf" class="text-blue-600 hover:underline">Week 3 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -179,7 +182,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 4</a> released Apr 23, Due Apr 28<br>
-                            Discussion Google Form: Midterm Review
+                            Discussion Google Form: Midterm Review<br>
+                            <a href="review_session/Week4ReviewSession.pdf" class="text-blue-600 hover:underline">Week 4 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -214,7 +218,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 5</a> released May 7, Due May 12<br>
-                            Activity #3 in section
+                            Activity #3 in section<br>
+                            <a href="review_session/Week6ReviewSession.pdf" class="text-blue-600 hover:underline">Week 6 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -233,7 +238,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 6</a> released May 14, Due May 19<br>
-                            Discussion Google Form: Aggregate Expenditures Model
+                            Discussion Google Form: Aggregate Expenditures Model<br>
+                            <a href="review_session/Week7ReviewSession.pdf" class="text-blue-600 hover:underline">Week 7 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -252,7 +258,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 7</a> released May 21, Due May 28<br>
-                            Activity #4 in section
+                            Activity #4 in section<br>
+                            <a href="review_session/Week8ReviewSession.pdf" class="text-blue-600 hover:underline">Week 8 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -271,7 +278,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 8</a> released May 28, Due Jun 2<br>
-                            Discussion Google Form: Monetary Policy
+                            Discussion Google Form: Monetary Policy<br>
+                            <a href="review_session/Week9ReviewSession.pdf" class="text-blue-600 hover:underline">Week 9 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
@@ -290,7 +298,8 @@
                         </td>
                         <td class="py-3 px-4">
                             <a href="https://app.tophat.com/e/504526/content/my-course" class="text-blue-600 hover:underline">TopHat Quiz 9</a> released Jun 4, Due Jun 10<br>
-                            Activity #5 in section
+                            Activity #5 in section<br>
+                            <a href="review_session/Week10ReviewSession.pdf" class="text-blue-600 hover:underline">Week 10 Review Session Questions</a>
                         </td>
                     </tr>
                     <tr>
